--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,7 +1,9 @@
 @using WebApp1.Models;
 @model WebApp1.Models.CategoryViewModel
 
-@{       
+@{
+    ViewData["Title"] = Model.CategoryName;
+    
     // The code below is used to populate the product page
     // The product page itself consists of 3 columns
     // We must first sort all the products into each column    
@@ -60,13 +62,15 @@
         <div id="categoryArea" style="margin-top: 15px;">
             <div class="categoryTitle">Filteren</div>
             <hr>
-            <form asp-action="Filtered" class="text-center" method="get">
+            <form asp-action="Filtered" method="get" class="text-center">
                 <div>
-                    <p>Min Price: </p><input class="form-control" type="text" asp-for="Filters.MinPrice"/>
-                    <span asp-validation-for="Filters.MinPrice" class="text-danger"></span>
-                    <p>Max Price: </p><input class="form-control" type="text" asp-for="Filters.MaxPrice"/>
-                    <span asp-validation-for="Filters.MaxPrice" class="text-danger"></span>
-                    <hr>                   
+                    <strong>Filteren op prijsgebieden</strong><br>
+                    <input type="hidden" asp-for="CategoryId" value="@Model.CategoryId"/>
+                    @for (int i = 0; i <= Model.PriceFilterRange.Length - 1; i++)
+                    {
+                        <input type="checkbox" name="PriceRanges" value="@Model.PriceFilterRange[i]"> @Model.PriceFilterRange[i]<br>
+                    }
+                    <hr>
                     <button class="btn btn-outline-success" type="submit">Filter</button>
                 </div>
             </form>
