--- a/Views/Products/Create3.cshtml
+++ b/Views/Products/Create3.cshtml
@@ -5,7 +5,57 @@
 
 
 <link rel="stylesheet" href="~/css/product_creation_generic.css">
- 
+<script type='text/javascript'>
+	var i=0;
+        function addFields(){
+            var container = document.getElementById("container");
+            // Clear previous contents of the container
+            //container.removeChild(container.lastChild);
+            // Append a node with a random text
+            //container.appendChild(document.createTextNode("Attribute "+ i));
+
+                
+				
+            // Create an <input> element, set its type and name attributes
+            container.appendChild(document.createTextNode("Attribute "+ i));
+
+            var input = document.createElement("input");
+            input.name= "newcustom["+i+"].extraAtribute.Attrbuut";
+            input.setAttribute("class","form-control");
+            input.id="newcustom["+i+"].extraAtribute.Attrbuut";
+            input.type="text";
+            input.value="";
+            input.placeholder="Attribuut Naam";
+
+                
+
+            var input2 = document.createElement("input");
+            input2.name= "newcustom["+i+"].extraAtribute.Type";
+            input2.setAttribute("class", "form-control");
+            input2.id="newcustom["+i+"].extraAtribute.Type";
+            input2.type="text";
+            input2.value="";
+            input2.placeholder="Type";
+            input2.style.marginTop = "10px";
+
+            var input3 = document.createElement("input");
+            input3.name= "newcustom["+i+"].extraAtributewaarde.waarde";
+            input3.setAttribute("class", "form-control");
+            input3.id="newcustom["+i+"].extraAtributewaarde.waarde";
+            input3.type="text";
+            input3.value="";
+            input3.placeholder="Type";
+            input3.style.marginTop = "10px";
+               
+            container.appendChild(input);
+            container.appendChild(input2);
+            container.appendChild(input3);
+            // Append a line break 
+            container.appendChild(document.createElement("br"));
+            i++;
+
+        }
+    </script> 
 <div class="pageRoot">
     <h2>Create</h2>
 
@@ -18,37 +68,37 @@
             <form asp-action="Create3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Title" class="control-label"></label>
-                    <input asp-for="Title" class="form-control" placeholder="Title"/>
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="productwaarde.Title" class="control-label"></label>
+                    <input asp-for="productwaarde.Title" class="form-control" placeholder="Title"/>
+                    <span asp-validation-for="productwaarde.Title" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price" class="control-label"></label>
-                    <input asp-for="Price" class="form-control" placeholder="Price"/>
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <label asp-for="productwaarde.Price" class="control-label"></label>
+                    <input asp-for="productwaarde.Price" class="form-control" placeholder="Price"/>
+                    <span asp-validation-for="productwaarde.Price" class="text-danger"></span>
                 </div>
                  <div class="form-group">
-                    <label asp-for="Quantity" class="control-label"></label>
-                    <input asp-for="Quantity" class="form-control" placeholder="Quantity"/>
-                    <span asp-validation-for="Quantity" class="text-danger"></span>
+                    <label asp-for="productwaarde.Quantity" class="control-label"></label>
+                    <input asp-for="productwaarde.Quantity" class="form-control" placeholder="Quantity"/>
+                    <span asp-validation-for="productwaarde.Quantity" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     
-                    <input asp-for="ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= '@Model.GetAttribuutsoortsA()' />
-                    <span asp-validation-for="ProductsoortId" class="text-danger"></span>
-                     <input asp-for="DiscountedPrice" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "-1" />
-                    <span asp-validation-for="DiscountedPrice" class="text-danger"></span>
+                    <input asp-for="productwaarde.ProductsoortId" class="form-control" placeholder="ProductsoortId" type="hidden"  value= '@Model.productwaarde.Id' />
+                    <span asp-validation-for="productwaarde.ProductsoortId" class="text-danger"></span>
+                     <input asp-for="productwaarde.DiscountedPrice" class="form-control" placeholder="ProductsoortId" type="hidden"  value= "-1" />
+                    <span asp-validation-for="productwaarde.DiscountedPrice" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for=" Description" class="form-control" placeholder="Description"/>
-                    <span asp-validation-for=" Description" class="text-danger"></span>
+                    <label asp-for="productwaarde.Description" class="control-label"></label>
+                    <input asp-for="productwaarde.Description" class="form-control" placeholder="Description"/>
+                    <span asp-validation-for="productwaarde.Description" class="text-danger"></span>
                 </div>
 
                  <div class="form-group">
-                <input asp-for="Image" type="file" Class="form-control" placeholder="Image"/>
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input asp-for="productwaarde.Image" type="file" Class="form-control" placeholder="Image"/>
+                <span asp-validation-for="productwaarde.Image" class="text-danger"></span>
                 </div>
                 @{var i = 0;}
                  @foreach (var item in Model.Attribuutsoorts)
@@ -56,14 +106,33 @@
                     
                     <div class="form-group">
                         <label class="control-label">@item.Attrbuut</label>
-                        <input type="text"  class="form-control" name='Attribuutwaarde[@i].waarde'/>
+                        <input type="text"  class="form-control" name="Attribuutsoorts[@i].Attribuutwaarde[0].Waarde"/>
                     </div>
 
                     <div class="form-group">
-                        <input type="hidden"  class="form-control" name='Attribuutwaarde[@i].AttribuutsoortId' value='@item.Id'/>
+                        <input type="hidden"  class="form-control" name="Attribuutsoorts[@i].Attribuutwaarde[0].AttribuutsoortId" value='@item.Id'/>
                     </div>
                     i = i +1;
                     }
+                    @for (var a = 0; a < Model.AcustomAtributes.Count; a++)
+                    {
+                        <div class="form-group">
+                        <input type="checkbox" asp-for="@Model.AcustomAtributes[a].selected"  />@Model.AcustomAtributes[a].customAtribute.Attrbuut
+                         </div>
+                         <div class="form-group">
+                        <input type="hidden" asp-for="@Model.AcustomAtributes[a].customAtribute.Attrbuut" />
+                        </div> 
+                         <div class="form-group">
+                        <input type="text" asp-for="@Model.AcustomAtributes[a].cattribuutwaarde.Waarde" />
+                        </div>
+                        <hr>    
+                                                                                                      
+                    }
+                
+                 <div id="container" class="form-group"></div>
+                 <div class="form-group">
+                    <input id="AddAtribute" class="btn" type="button" value="Voeg Custom attribuut toe" onclick="addFields()" />
+                 </div>
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
