--- a/Views/Category/Filtered.cshtml
+++ b/Views/Category/Filtered.cshtml
@@ -33,6 +33,14 @@
                 break;
         }
     }
+
+    ;
+    List<string> AttributeFilterList = new List<string>();
+    foreach (var item in Model.Filters.AttributeFilters)
+    {
+        AttributeFilterList.Add(item.AttributeId.ToString() + "!@#$%^&*" + item.FilterValue);
+        
+    }
  }
 
 <link rel="stylesheet" href="~/css/mainpage.css">
@@ -63,22 +71,33 @@
         <div id="categoryArea" style="margin-top: 15px;">
             <div class="categoryTitle">Filteren</div>
             <hr>
-            <form asp-action="Filtered" method="get" class="text-center">
+            <form asp-action="Filtered" method="post" class="text-center">
                 <div>
-                    <strong>Filteren op prijsgebieden</strong><br>
+                    <strong>Prijsgebied</strong><br>
                     <input type="hidden" asp-for="CategoryId" value="@Model.CategoryId"/>
                     @for (int i = 0; i <= Model.PriceFilterRange.Length - 1; i++)
                     {
                         if (Model.Filters.PriceRanges.Contains(Model.PriceFilterRange[i]))
                         {
-                            <input type="checkbox" name="PriceRanges" value="@Model.PriceFilterRange[i]" checked> @Model.PriceFilterRange[i]<br>
+                            <input type="checkbox" name="@("priceRange" + i.ToString())" value="@Model.PriceFilterRange[i]" checked> @Model.PriceFilterRange[i]<br>
                         }
                         else
                         {
-                            <input type="checkbox" name="PriceRanges" value="@Model.PriceFilterRange[i]"> @Model.PriceFilterRange[i]<br>
+                            <input type="checkbox" name="@("priceRange" + i.ToString())" value="@Model.PriceFilterRange[i]"> @Model.PriceFilterRange[i]<br>                                                                                                                 
                         }
                     }
                     <hr>
+                    @if (Model.Attributes.Any())
+                    {
+                        <strong>Attributen</strong><br>
+                        for (int i=0; i <= Model.Attributes.Count-1; i++)
+                        {
+                            <input type="hidden" asp-for="Filters.AttributeFilters[i].AttributeId" value="@Model.Attributes[i][1]">
+                            <label>@Model.Attributes[i][0]</label>
+                            <input class="form-control" type="text" asp-for="Filters.AttributeFilters[i].FilterValue" value="@Model.Filters.AttributeFilters[i].FilterValue">                            
+                        }
+                        <hr>
+                    }
                     <button class="btn btn-outline-success" type="submit">Filter</button>
                 </div>
             </form>
@@ -241,7 +260,7 @@
                 else
                 {
                     <li class="page-item">
-                        <a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (Model.Products.PageNumber - 1),PriceRanges = Model.Filters.PriceRanges})">Vorige</a>
+                        <a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (Model.Products.PageNumber - 1),PriceRanges = Model.Filters.PriceRanges,AttributeArray=AttributeFilterList})">Vorige</a>
                     </li>
                 }
                 @for (int i = 0; i < Model.Products.TotalPages; i++)
@@ -249,12 +268,12 @@
                     if ((i + 1) == Model.Products.PageNumber)
                     {
                         <li class="page-item active">
-                            <a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (i + 1),PriceRanges = Model.Filters.PriceRanges})">@(i + 1) <span class="sr-only">current</span></a>
+                            <a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (i + 1),PriceRanges = Model.Filters.PriceRanges,AttributeArray=AttributeFilterList})">@(i + 1) <span class="sr-only">current</span></a>
                         </li>
                     }
                     else
                     {
-                        <li class="page-item"><a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (i + 1),PriceRanges = Model.Filters.PriceRanges})">@(i + 1)</a></li>
+                        <li class="page-item"><a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (i + 1),PriceRanges = Model.Filters.PriceRanges,AttributeArray=AttributeFilterList})">@(i + 1)</a></li>
                     }
                 }
                 @if (Model.Products.PageNumber == Model.Products.TotalPages)
@@ -266,7 +285,7 @@
                 else
                 {
                     <li class="page-item">
-                        <a class="page-link" asp-action="Filtered" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (Model.Products.PageNumber + 1),PriceRanges = Model.Filters.PriceRanges})">Volgende</a>
+                        <a class="page-link" href="@Url.Action("Filtered", "Category", new{categoryId = Model.CategoryId,pageNumber = (Model.Products.PageNumber + 1),PriceRanges = Model.Filters.PriceRanges,AttributeArray=AttributeFilterList})" data-form-method="post">Volgende</a>
                     </li>
                 }
             </div>
