--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,3 +1,4 @@
+@using Microsoft.EntityFrameworkCore.Internal
 @using WebApp1.Models;
 @model WebApp1.Models.CategoryViewModel
 
@@ -62,15 +63,26 @@
         <div id="categoryArea" style="margin-top: 15px;">
             <div class="categoryTitle">Filteren</div>
             <hr>
-            <form asp-action="Filtered" method="get" class="text-center">
+            <form asp-action="Filtered" method="post" class="text-center">
                 <div>
-                    <strong>Filteren op prijsgebieden</strong><br>
+                    <strong>Prijsgebied</strong><br>
                     <input type="hidden" asp-for="CategoryId" value="@Model.CategoryId"/>
                     @for (int i = 0; i <= Model.PriceFilterRange.Length - 1; i++)
                     {
-                        <input type="checkbox" name="PriceRanges" value="@Model.PriceFilterRange[i]"> @Model.PriceFilterRange[i]<br>
+                        <input type="checkbox" asp-for="Filters.PriceRanges[i]" value="@Model.PriceFilterRange[i]"> @Model.PriceFilterRange[i]<br>
                     }
                     <hr>
+                    @if (Model.Attributes.Any())
+                    {
+                        <strong>Attributen</strong><br>
+                         for (int i=0; i <= Model.Attributes.Count-1; i++)
+                         {
+                             <input type="hidden" asp-for="Filters.AttributeFilters[i].AttributeId" value="@Model.Attributes[i][1]">
+                             <label>@Model.Attributes[i][0]</label>
+                             <input class="form-control" type="text" asp-for="Filters.AttributeFilters[i].FilterValue">                            
+                         }
+                        <hr>
+                    }
                     <button class="btn btn-outline-success" type="submit">Filter</button>
                 </div>
             </form>
