Footer with content

--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -273,10 +273,50 @@
                 }
             </div>
         </div>
-    </div>
-    
-</div>
 
+    </div>
+
+</div>
+<div class="footer">
+    <div class="footeritemContainer">
+        <div class="footerItem">
+                <ul>
+                    <li>
+                        <b><a>Klantenservice</a></b>
+                        <ul>
+                            <li>
+                                <a>Contact</a>
+                            </li>
+                            <li>
+                                <a>Bestellen & Leveren</a>
+                            </li>
+                            <li>
+                                <a>Betalen</a>
+                            </li>
+                            <li>
+                                <a>Retourneren</a>
+                            </li>
+                            <li>
+                                <a>Garantie & Reparatie</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+        </div>
+        <div class="footerItem">
+                <ul>
+                    <li>
+                        <b><a>Over Ons</a></b>
+                        <ul>
+                            <li>
+                                <a>De voordelen van SailingBoys</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>            
+        </div>
+    </div>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
 <script>
     
