--- a/wwwroot/css/mainpage.css
+++ b/wwwroot/css/mainpage.css
@@ -117,3 +117,37 @@ button.categoryBtnSelected {
 div.pagination {
     margin-top: 30px;
 }
+
+div.footer{
+    width: 99%;
+    height: 175px; 
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 15px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
+li{
+    list-style-type: none;
+}
+
+ul, li {
+    margin: 0;
+    padding: 0;
+}
+
+.footerItemContainer{
+    width: 50%;
+    margin: 0 auto;
+}
+
+.footerItem {
+    display: inline-block;
+    float: left;
+    padding-right: 50px;
+}
+
