--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
 </head>
 
 <body>
+    
 <div>
     @RenderSection("styles", required: false)
     @RenderBody()
@@ -120,6 +121,48 @@
 
 </environment>
 @RenderSection("Scripts", required: false)
+
+<div class="footer">
+    <div class="footeritemContainer">
+        <div class="footerItem">
+                <ul>
+                    <li>
+                        <b><a>Klantenservice</a></b>
+                        <ul>
+                            <li>
+                                <a>Contact</a>
+                            </li>
+                            <li>
+                                <a>Bestellen & Leveren</a>
+                            </li>
+                            <li>
+                                <a>Betalen</a>
+                            </li>
+                            <li>
+                                <a>Retourneren</a>
+                            </li>
+                            <li>
+                                <a>Garantie & Reparatie</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+        </div>
+        <div class="footerItem">
+                <ul>
+                    <li>
+                        <b><a>Over Ons</a></b>
+                        <ul>
+                            <li>
+                                <a>De voordelen van SailingBoys</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>            
+        </div>
+    </div>
+</div>
+
 </body>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
