--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -35,10 +35,10 @@ li{
     list-style-type: none;
 }
 
-ul, li {
+/* ul, li {
     margin: 0;
     padding: 0;
-}
+} */
 
 .footerItemContainer{
     width: 50%;
