--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,9 +10,9 @@
 <link rel="stylesheet" href="~/css/image.css">
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <div class="section">
   <h1>Welkom bij de webshop!</h1>
 
@@ -22,16 +22,15 @@
 <div class="popup" onclick="togglePopup1()" id="cat0">
  
     <div class="sel popuptext" id="myPopup1">
-      <div id="menu"></div>
+      <div id="menu" class="menu"></div>
     </div>
 
   <img src="~/images/circle.png" class="category" >
 </div>
 
 <div class="popup" onclick="togglePopup2()" id="cat1">
-
     <div class="sel popuptext" id="myPopup2">
-      <div id="menu2"></div>
+      <div id="menu2" class="menu"></div>
     </div>
 <img src="~/images/circle.png" class="category">
 </div>
@@ -42,12 +41,15 @@ function menuToElement(menu) {
     const ul = document.createElement("ul");
     ul.className = "imageDropdownUl";
     for (const item of menu) {
+      
         const li = document.createElement("li");
         if (Object(item) === item) {
-            li.textContent = item.text + ' \u25BD';
+            li.textContent = item.text + ' \u25BD';         
             li.className = "btn btn-primary";
+            
             li.appendChild(menuToElement(item.children));
             
+
         } else {
             
             const a = document.createElement("a");
@@ -58,6 +60,7 @@ function menuToElement(menu) {
         ul.appendChild(li);
         //console.log(menu);
     }
+    
     return ul;
    
 }
@@ -72,7 +75,7 @@ var categories = [{
         text: "piston",
         children: [4,5,6]
     }]
-    }]   
+    },10,11,12]   
 }, {
     text: "tire",
     children: [7,8,9]
@@ -87,7 +90,7 @@ const ul = menuToElement(engine);
 document.getElementById("menu").appendChild(ul);
 
 const ul2 = menuToElement(tire);
-document.getElementById("menu2").app, endChild(ul2);
+document.getElementById("menu2").appendChild(ul2);
 
 
 </script>
@@ -106,6 +109,13 @@ function togglePopup2() {
     var popup = document.getElementById("myPopup2");
     popup.classList.toggle("show");
 }
+
+
+$(".btn-primary").on('click', function(event){  
+    event.stopImmediatePropagation();
+    $(this).children('.imageDropdownUl').toggle();
+});
+
 
 
 //dropdown in popup
