--- a/wwwroot/css/image.css
+++ b/wwwroot/css/image.css
@@ -15,6 +15,8 @@
   .popup .popuptext {
 	visibility: hidden;
 	min-width: 200px;
+	max-height:300px;
+	overflow:auto;
 	background-color: lightblue;
 	color: #fff;
 	text-align: center;
@@ -28,7 +30,7 @@
   }
   
   /* Popup arrow */
-  .popup .popuptext::after {
+  /* .popup .popuptext::after {
 	content: "";
 	position: relative;
 	top: 100%;
@@ -38,7 +40,7 @@
 	border-style: solid;
 	border-color: #555 transparent transparent transparent;
 	margin-right: 50px;
-  }
+  } */
   
   /* Toggle this class when clicking on the popup container (hide and show the popup) */
   .popup .show {
@@ -105,15 +107,15 @@ li > ul {
 	display: none;
   }
 
-  li:hover > ul {
+/* li:hover > ul {
 	display: block;
-}
+} */
 
-#menu{
+/* #menu{
 	padding-right: 50px;
 	
 	
-}
+} */
 .imageDropdown{
 	padding: 10px;
 	
@@ -148,4 +150,19 @@ li > ul {
 
 .vessel{
 	
+}
+
+.show2 {
+	visibility: visible;
+	-webkit-animation: fadeIn 1s;
+	animation: fadeIn 1s;
+	display: block;
+}
+
+.primary-button{
+	background-color: lightblue;
+}
+
+.menu{
+	padding-right: 50px;
 }
